Update package.json & add script file

--- a/package.json
+++ b/package.json
@@ -1,23 +1,68 @@
 {
-  "name": "astron",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "displayName": "Astron",
+  "license": "AGPL-3.0 license",
+  "description": "Astron is the primary bot of the Astron Collection — a modular suite of advanced Discord applications.",
+  "author": "Sky Genesis Enterprise",
+  "email": "contact@skygenesisenterprise.com",
+  "name": "react-vite-tailwind",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pr": "node scripts/pr.mjs",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "vite --host 0.0.0.0 --port 5173",
+    "dev:backend": "node --trace-warnings --loader ts-node/esm --experimental-specifier-resolution=node ./api/server.ts",
+    "test": "jest --watchAll --passWithNoTests",
+    "test:frontend": "jest --watchAll --passWithNoTests",
+    "test:backend": "jest --watchAll --passWithNoTests",
+    "test:unit": "jest --watchAll --passWithNoTests",
+    "test:integration": "jest --watch --passWithNoTests",
+    "test:coverage": "jest --coverage --passWithNoTests",
+    "test:coverage:frontend": "jest --coverage --passWithNoTests",
+    "test:coverage:backend": "jest --coverage --passWithNoTests",
+    "test:coverage:unit": "jest --coverage --passWithNoTests",
+    "build": "npm run build:frontend && npm run build:backend && npm run build:merge && npm run build:pgp",
+    "build:frontend": "vite build --outDir dist/frontend",
+    "build:backend": "tsc -p tsconfig.server.json --outDir dist/backend",
+    "build:merge": "cp package.json dist && cp .env dist",
+    "build:pgp": "node scripts/pgp-key.cjs",
+    "lint": "bunx biome lint --write && bunx tsc --noEmit",
+    "format": "bunx biome format --write",
+    "preview": "vite preview",
+    "start:backend": "node --trace-warnings --loader ts-node/esm --experimental-specifier-resolution=node ./api/server.ts",
+    "start:frontend": "vite preview",
+    "start": "npm run start:backend & npm run start:frontend",
+    "electron": "electron ./electron/main.cjs",
+    "docker:build": "docker build -t aether-mail .",
+    "docker:build:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml build",
+    "docker:build:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml build",
+    "docker:run": "docker run -p 5000:5000 aether-mail",
+    "docker:up": "docker-compose up",
+    "docker:up:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
+    "docker:up:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
+    "docker:down": "docker-compose down",
+    "docker:restart": "docker-compose down && docker-compose up",
+    "docker:clean": "docker system prune -f --volumes",
+    "docker:logs": "docker-compose logs -f",
+    "docker:exec:backend": "docker exec -it aether-mail-backend sh",
+    "docker:exec:frontend": "docker exec -it aether-mail-frontend sh",
+    "pgp-keygen": "node scripts/pgp-key.cjs",
+    "py:venv": "source .venv/bin/activate",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sky-Genesis-Enterprise/astron.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Sky-Genesis-Enterprise/astron/issues"
   },
   "homepage": "https://github.com/Sky-Genesis-Enterprise/astron#readme",
   "dependencies": {
-    "discord.js": "^14.19.3"
+    "discord.js": "^14.19.3",
+    "openpgp": "^6.1.1"
   }
 }
