--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
+    "inquirer": "^12.6.3",
     "openpgp": "^6.1.1",
     "path": "^0.12.7"
   }
