--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "inquirer": "^12.6.3",
     "node-fetch": "^3.3.2",
     "openpgp": "^6.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "winston": "^3.17.0"
   }
 }
