--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
   "dependencies": {
     "@discordjs/builders": "^1.11.2",
     "axios": "^1.9.0",
-    "discord.js": "^14.19.3",
+    "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
     "fs": "^0.0.1-security",
+    "husky": "^9.1.7",
     "inquirer": "^12.6.3",
     "node-fetch": "^3.3.2",
     "openpgp": "^6.1.1",
